# QvPlugin-SSR

./: .gitmodules  CMakeLists.txt  QvSimplePlugin.pro  README.md  SSRPlugin.cpp  SSRPlugin.hpp  SimplePlugin.cpp  SimplePlugin.hpp  SimplePluginEventHandler.cpp  SimplePluginEventHandler.hpp  SimplePluginKernel.cpp  SimplePluginKernel.hpp
.github/workflows/: build-simpleplugin-no-avx.yml  build-simpleplugin-qt6.yml  build-simpleplugin.yml  hashfile.yml  pacman.yml
cmake/: shadowsocksr-uvw.cmake
common/: CommonHelpers.cpp  CommonHelpers.hpp
converter/: ShareLinkParser.cpp  ShareLinkParser.hpp
core/: EventHandler.cpp  EventHandler.hpp  Serializer.cpp  Serializer.hpp
core/kernel/: SSRInstance.cpp  SSRInstance.hpp
kernel/: SSRInstance.cpp  SSRInstance.hpp  httpProxy.cpp  httpProxy.hpp  socketStream.cpp  socketStream.hpp
ui/: GUIInterface.hpp  SSROutboundEditor.cpp  SSROutboundEditor.hpp  SSROutboundEditor.ui
